# localmoney-indexer

./: Cargo.toml  README.md
src/: main.rs  trades.sql
